--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,109 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvDayView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:padding="@dimen/dp_8"
+        android:gravity="center"
+        android:textAllCaps="true"
+        android:textColor="@color/black"
+        android:fontFamily="@font/museosans700"
+        android:textSize="@dimen/sp_14"
+        android:text="@string/day_view"
+        />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvMonthView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_16"
+        app:layout_constraintTop_toBottomOf="@+id/tvDayView"
+        android:padding="@dimen/dp_8"
+        android:gravity="center"
+        android:textAllCaps="true"
+        android:textColor="@color/black"
+        android:fontFamily="@font/museosans700"
+        android:textSize="@dimen/sp_14"
+        android:text="@string/month_view" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvSelectionTypeView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_16"
+        app:layout_constraintTop_toBottomOf="@+id/tvMonthView"
+        android:padding="@dimen/dp_8"
+        android:gravity="center"
+        android:textAllCaps="true"
+        android:textColor="@color/black"
+        android:fontFamily="@font/museosans700"
+        android:textSize="@dimen/sp_14"
+        android:text="@string/selection_type" />
+
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/groupBtns"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:constraint_referenced_ids="tvDayView,tvMonthView,tvSelectionTypeView"/>
+
+    <com.example.library.calendarView.CalenderView
+        android:id="@+id/selectionTypeCal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dp_8"
+        android:layout_marginEnd="@dimen/dp_8"
+        app:calenderSelectionTypeEnabled="true"
+        app:swipeEnabled="false"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <com.example.library.calendarView.CalenderView
+        android:id="@+id/dayCal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dp_8"
+        android:layout_marginEnd="@dimen/dp_8"
+        app:calenderSelectionTypeEnabled="false"
+        app:calendarViewType="day"
+        app:swipeEnabled="false"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.example.library.calendarView.CalenderView
+        android:id="@+id/monthCal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dp_8"
+        android:layout_marginEnd="@dimen/dp_8"
+        app:calenderSelectionTypeEnabled="false"
+        app:calendarViewType="month"
+        app:swipeEnabled="false"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvBack"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/dp_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:padding="@dimen/dp_16"
+        android:gravity="center"
+        android:textAllCaps="true"
+        android:visibility="gone"
+        android:textColor="@color/colorPrimary"
+        android:fontFamily="@font/museosans700"
+        android:textSize="@dimen/sp_18"
+        android:text="@string/back" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
