--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,9 +74,10 @@
         android:layout_marginStart="@dimen/dp_8"
         android:layout_marginEnd="@dimen/dp_8"
         app:calenderSelectionTypeEnabled="false"
-        app:calendarViewType="day"
+        app:hy_calendarViewType="day"
         app:swipeEnabled="false"
         android:visibility="gone"
+        app:type="one_day_picker"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
